@@ -1,3 +1,11 @@
+[0, 15, 59]: 2018-08-17
+  - issue with C based loader and leading zeros (reported by 
+    `Tom Hamilton Stubber <https://bitbucket.org/TomHamiltonStubber/>`__)
+
+[0, 15, 59]: 2018-08-17
+  - issue with C based loader and leading zeros (reported by 
+    `Tom Hamilton Stubber <https://bitbucket.org/TomHamiltonStubber/>`__)
+
 [0, 15, 58]: 2018-08-17
   - simple mappings can now be used as keys when round-tripping::
 
